feat: color scheme

--- a/work_phase_3/visceral_design.html
+++ b/work_phase_3/visceral_design.html
@@ -99,6 +99,69 @@
                     </div>
                 </div>
             </article>
+
+            <article class="design-section m-b-12">
+                <h2 class="m-b-6">Color Scheme</h2>
+                <p class="m-b-6">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint dignissimos ratione odio laudantium
+                    possimus accusamus mollitia tempora nulla excepturi obcaecati?
+                </p>
+
+                <div class="color-palette">
+                    <div class="color-group">
+                        <h4 class="m-b-4">Primary Colors</h4>
+                        <div class="color-swatches">
+                            <div class="color-swatch">
+                                <div class="swatch primary-color"></div>
+                                <div class="color-info">
+                                    <h5>Primary</h5>
+                                    <p class="color-code">#2c3e50</p>
+                                    <p class="color-usage">Headers, navigation etc</p>
+                                </div>
+                            </div>
+                            <div class="color-swatch">
+                                <div class="swatch secondary-color"></div>
+                                <div class="color-info">
+                                    <h5>Secondary</h5>
+                                    <p class="color-code">#3498db</p>
+                                    <p class="color-usage">Links, buttons etc</p>
+                                </div>
+                            </div>
+                            <div class="color-swatch">
+                                <div class="swatch accent-color"></div>
+                                <div class="color-info">
+                                    <h5>Accent</h5>
+                                    <p class="color-code">#e74c3c</p>
+                                    <p class="color-usage">Warnings, alerts etc</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="color-group">
+                        <h4 class="m-b-4">Supporting Colors</h4>
+                        <div class="color-swatches">
+                            <div class="color-swatch">
+                                <div class="swatch text-color"></div>
+                                <div class="color-info">
+                                    <h5>Text</h5>
+                                    <p class="color-code">#333333</p>
+                                    <p class="color-usage">Body text</p>
+                                </div>
+                            </div>
+                            <div class="color-swatch">
+                                <div class="swatch background-color"></div>
+                                <div class="color-info">
+                                    <h5>Background</h5>
+                                    <p class="color-code">#f5f5f5</p>
+                                    <p class="color-usage">Page background</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </article>
+        </div>
     </main>
 </body>
 
