--- a/work_phase_3/visceral_design.html
+++ b/work_phase_3/visceral_design.html
@@ -16,7 +16,6 @@
 </head>
 
 <body>
-    <!-- START PAGE STRUCTURE -->
     <nav id="nav-mobile" aria-label="Mobile Navigation">
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -156,6 +155,82 @@
                                     <p class="color-code">#f5f5f5</p>
                                     <p class="color-usage">Page background</p>
                                 </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </article>
+
+            <article class="design-section m-b-12">
+                <h2 class="m-b-6">Typography</h2>
+                <p class="m-b-6">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia tenetur mollitia ea consequuntur
+                    temporibus dolor sunt error placeat enim. Delectus?
+                </p>
+
+                <div class="typography-showcase">
+                    <div class="font-family-section m-b-8">
+                        <h4 class="m-b-4">Font Family</h4>
+                        <div class="font-display">
+                            <span class="font-name">Plus Jakarta Sans</span>
+                            <p class="font-fallback">Fallbacks: Times New Roman, Times, serif</p>
+                        </div>
+                    </div>
+
+                    <div class="type-scale">
+                        <h4 class="m-b-4">Type Scale & Hierarchy</h4>
+
+                        <div class="type-example m-b-4">
+                            <h1 class="type-sample">Heading 1</h1>
+                            <div class="type-details">
+                                <span class="type-size">4rem (64px)</span>
+                                <span class="type-weight">Variable weight</span>
+                                <span class="type-usage">Page titles</span>
+                            </div>
+                        </div>
+
+                        <div class="type-example m-b-4">
+                            <h2 class="type-sample">Heading 2</h2>
+                            <div class="type-details">
+                                <span class="type-size">3rem (48px)</span>
+                                <span class="type-weight">Variable weight</span>
+                                <span class="type-usage">Section headers</span>
+                            </div>
+                        </div>
+
+                        <div class="type-example m-b-4">
+                            <h3 class="type-sample">Heading 3</h3>
+                            <div class="type-details">
+                                <span class="type-size">1.5rem (24px)</span>
+                                <span class="type-weight">Variable weight</span>
+                                <span class="type-usage">Subsection titles</span>
+                            </div>
+                        </div>
+
+                        <div class="type-example m-b-4">
+                            <h4 class="type-sample">Heading 4</h4>
+                            <div class="type-details">
+                                <span class="type-size">1rem (16px)</span>
+                                <span class="type-weight">Bold</span>
+                                <span class="type-usage">Component titles</span>
+                            </div>
+                        </div>
+
+                        <div class="type-example m-b-4">
+                            <h5 class="type-sample">Heading 5</h5>
+                            <div class="type-details">
+                                <span class="type-size">0.75rem (12px)</span>
+                                <span class="type-weight">Bold</span>
+                                <span class="type-usage">Small labels</span>
+                            </div>
+                        </div>
+
+                        <div class="type-example m-b-4">
+                            <p class="type-sample">Body Text</p>
+                            <div class="type-details">
+                                <span class="type-size">1rem (16px)</span>
+                                <span class="type-weight">Regular</span>
+                                <span class="type-usage">Main content</span>
                             </div>
                         </div>
                     </div>
