fix: add space bottom

--- a/work_phase_3/visceral_design.html
+++ b/work_phase_3/visceral_design.html
@@ -161,7 +161,7 @@
                 </div>
             </article>
 
-            <article class="design-section m-b-12">
+            <article class="design-section m-b-12 p-b-12">
                 <h2 class="m-b-6">Typography</h2>
                 <p class="m-b-6">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia tenetur mollitia ea consequuntur
@@ -236,6 +236,8 @@
                     </div>
                 </div>
             </article>
+
+            <div class="p-y-24"></div>
         </div>
     </main>
 </body>
