chore: refactor skeletons

--- a/work_phase_3/visceral_design.html
+++ b/work_phase_3/visceral_design.html
@@ -46,7 +46,7 @@
                 </p>
             </header>
 
-            <article class="design-section m-b-12">
+            <article class="base-card m-b-12">
                 <h2 class="m-b-6">Wireframe Gallery</h2>
                 <p class="m-b-8">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, sapiente ea id ipsam voluptatibus
@@ -99,7 +99,7 @@
                 </div>
             </article>
 
-            <article class="design-section m-b-12">
+            <article class="base-card m-b-12">
                 <h2 class="m-b-6">Color Scheme</h2>
                 <p class="m-b-6">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint dignissimos ratione odio laudantium
@@ -161,7 +161,7 @@
                 </div>
             </article>
 
-            <article class="design-section m-b-12 p-b-12">
+            <article class="base-card m-b-12 p-b-12">
                 <h2 class="m-b-6">Typography</h2>
                 <p class="m-b-6">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia tenetur mollitia ea consequuntur
