feat: add aria-current="page"

--- a/work_phase_3/behavioural_design.html
+++ b/work_phase_3/behavioural_design.html
@@ -8,22 +8,38 @@
     <link rel="stylesheet" href="css/base.css" />
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/components.css" />
+    <link rel="stylesheet" href="css/page_css/style_guide.css" />
 
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
 
-    <title>Work Phase 3</title>
+    <title>Style Guide</title>
 </head>
 
 <body>
-    <!-- START PAGE STRUCTURE -->
-    <nav id="nav-mobile" aria-label="Mobile Navigation"></nav>
-    <nav id="nav-dekstop" aria-label="Dekstop Navigation"></nav>
+    <nav id="nav-mobile" aria-label="Mobile Navigation">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="site_map.html">Site Map</a></li>
+            <li><a aria-current="page" href="style_guide.html">Guide</a></li>
+        </ul>
+    </nav>
+
+    <nav id="nav-dekstop" aria-label="Desktop Navigation">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="visceral_design.html">Visceral</a></li>
+            <li><a aria-current="page" href="behavioural_design.html">Behavioral</a></li>
+            <li><a href="reflective_design.html">Reflective</a></li>
+            <li><a href="site_map.html">Site Map</a></li>
+            <li><a href="style_guide.html">Style Guide</a></li>
+        </ul>
+    </nav>
 
     <main>
-        <h1>WP3 Home Page</h1>
+        <div class="container">
+
+        </div>
     </main>
-
-
 </body>
 
 </html>
