--- a/work_phase_3/index.html
+++ b/work_phase_3/index.html
@@ -18,7 +18,7 @@
     <!-- START PAGE STRUCTURE -->
     <nav id="nav-mobile" aria-label="Mobile Navigation">
         <ul>
-            <li><a href="index.html"><span class="icon">🏚️</span></a></li>
+            <li><a href="index.html" aria-current="page"><span class="icon">🏚️</span></a></li>
             <li><a href="site_map.html"><span class="icon">🗺️</span></a></li>
             <li><a href="style_guide.html"><span class="icon">🖼️</span></a></li>
             <li><a href="ethical_response.html"><span class="icon">🧑‍💻</span></a></li>
@@ -27,7 +27,7 @@
     </nav>
     <nav id="nav-dekstop" aria-label="Dekstop Navigation">
         <ul>
-            <li><a href="index.html"><span class="icon">Home</span></a></li>
+            <li><a href="index.html" aria-current="page"><span class="icon">Home</span></a></li>
             <li><a href="site_map.html"><span class="icon">Site Map</span></a></li>
             <li><a href="style_guide.html"><span class="icon">Style Guide</span></a></li>
             <li><a href="ethical_response.html"><span class="icon">Ethical Response</span></a></li>
