--- a/work_phase_3/style_guide.html
+++ b/work_phase_3/style_guide.html
@@ -20,7 +20,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="site_map.html">Site Map</a></li>
-            <li><a href="style_guide.html">Guide</a></li>
+            <li><a aria-current="page" href="style_guide.html">Guide</a></li>
         </ul>
     </nav>
 
@@ -31,7 +31,7 @@
             <li><a href="behavioural_design.html">Behavioral</a></li>
             <li><a href="reflective_design.html">Reflective</a></li>
             <li><a href="site_map.html">Site Map</a></li>
-            <li><a href="style_guide.html">Style Guide</a></li>
+            <li><a aria-current="page" href="style_guide.html">Style Guide</a></li>
         </ul>
     </nav>
 
