--- a/work_phase_3/visceral_design.html
+++ b/work_phase_3/visceral_design.html
@@ -20,14 +20,14 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="site_map.html">Site Map</a></li>
-            <li><a href="style_guide.html">Guide</a></li>
+            <li><a aria-current="page" href="style_guide.html">Guide</a></li>
         </ul>
     </nav>
 
     <nav id="nav-dekstop" aria-label="Desktop Navigation">
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="visceral_design.html">Visceral</a></li>
+            <li><a aria-current="page" href="visceral_design.html">Visceral</a></li>
             <li><a href="behavioural_design.html">Behavioral</a></li>
             <li><a href="reflective_design.html">Reflective</a></li>
             <li><a href="site_map.html">Site Map</a></li>
