feat: Crumbs (Timeline) annotation

--- a/work_phase_3/site_map.html
+++ b/work_phase_3/site_map.html
@@ -38,31 +38,60 @@
 
     <main>
         <div class="container">
-            <h1>WP3 Home Page</h1>
-            <img src="assets/sitemap.png" alt="Image of my created sitemap" class="responsive-img" />
+            <section class="sitemap">
+                <h1>Sitemap for the "FeedCrumbs" project</h1>
+                <img src="assets/sitemap.png" alt="Image of my created sitemap" class="responsive-img" />
+            </section>
 
             <section class="accordion m-y-5 p-b-20">
                 <div class="accordion-item open">
                     <button class="accordion-header">▷ Inspiration</button>
                     <div class="accordion-content">
-                        <p class="m-y-3">
-                            Central hub for users to see and share inspiring content. Supports the client's goal of
-                            empowering users with knowledge and User story 'As a ...'.
-                            <span style="color: var(--secondary-color)">
-                                Note: this should be your content! These are your annotations (see L08 for details).
-                            </span>
+                        <p class="p-b-3">
+                            This is my annotation for my website sitemap implementation. This section is to show how
+                            the sitemap relates to the client goals and user needs. Each annotations also includes
+                            the describe the purpose, features, functionality, and accessibility considerations of each
+                            page.
                         </p>
                         <div class="accordion nested">
                             <div class="accordion-item">
-                                <button class="accordion-header">▷ Garden Showcase</button>
+                                <button class="accordion-header">▷ Crumbs (Timeline)</button>
                                 <div class="accordion-content">
-                                    <p class="m-y-3">THIS SHOULD BE YOUR ANNOTATION FOR YOUR WEBSITE A
-                                        showcase of inspiring food gardens. Supports ...</p>
+                                    <p>
+                                        "Community Representation" and "Create Meaningful Connections" value that have
+                                        been established is designed to so that
+                                        people can express, share, and connect with others in their community. I
+                                        specified that some of the needs are to people to share their stories,
+                                        experiences,
+                                        and ideas through various medias.
+
+                                        This Crumbs feature is exists to cover those values and needs.
+                                        Crumbs is like a tweet in Twitter, or a post in Facebook, but in this case, it
+                                        is a way for people to represent their community and connect with others by
+                                        sharing posts, community events, and traditional cuisines recipes.
+
+                                        The Crumbs page is designed to be user-friendly and accessible to all users,
+                                        thorugh beginner friendly guides and accessibility considerations.
+
+                                        In details, crumbs can be three types a general text-based post like
+                                        Reddit/Twitter, a Community Event Promotion, or a Traditional Cuisine Recipe
+                                        Post.
+                                    </p>
+
+                                    <div class="accordion-item m-y-6">
+                                        <button class="accordion-header">▷ Search/Filter Crumbs</button>
+                                        <div class="accordion-content">
+                                            <p>
+
+                                            </p>
+                                        </div>
+                                    </div>
                                 </div>
+
+
                             </div>
                         </div>
                     </div>
-                </div>
             </section>
         </div>
     </main>
