feat: search and filter

--- a/work_phase_3/site_map.html
+++ b/work_phase_3/site_map.html
@@ -82,7 +82,28 @@
                                         <button class="accordion-header">▷ Search/Filter Crumbs</button>
                                         <div class="accordion-content">
                                             <p>
+                                                The top part of the crubms page is a search and filter feature.
+                                                This feature is created to make it easier for user to find relevant
+                                                crumbs
+                                                based on their preferences.
+                                                As the search bar is actually a form input and to adhere to WCAG 3.3.2
+                                                (Labels and Instructions), Labels and Instructions regarding what
+                                                is required to fill will be made visible to the users.
+                                            </p>
+                                        </div>
+                                    </div>
 
+                                    <div class="accordion-item m-y-6">
+                                        <button class="accordion-header">▷ Search/Filter Crumbs</button>
+                                        <div class="accordion-content">
+                                            <p>
+                                                The top part of the crubms page is a search and filter feature.
+                                                This feature is created to make it easier for user to find relevant
+                                                crumbs
+                                                based on their preferences.
+                                                As the search bar is actually a form input and to adhere to WCAG 3.3.2
+                                                (Labels and Instructions), Labels and Instructions regarding what
+                                                is required to fill will be made visible to the users.
                                             </p>
                                         </div>
                                     </div>
