feat: init communities and OZvents

--- a/work_phase_3/site_map.html
+++ b/work_phase_3/site_map.html
@@ -283,6 +283,14 @@
                                         and also the details of each
                                         crumbs. Therefore, users can connect with the communities and people through a
                                         geolocated Rune, OZvent, or Crumbings
+
+                                        <br />
+                                        <br />
+                                        Simliar to the Crumbs page,
+                                        For first
+                                        time users, a
+                                        step by step guideline/tutorial will be shown to help them understand how to
+                                        navigate and utilize this page.
                                     </p>
 
                                     <div class="accordion-item m-y-6">
@@ -430,6 +438,61 @@
                                                 Same as above, for ethical considerations, community notes will be
                                                 available if necessary to
                                                 mitigate the risk of any potential innapropriate contents.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion nested">
+                            <div class="accordion-item m-t-4">
+                                <button class="accordion-header">▷ Communities & OZvents</button>
+                                <div class="accordion-content">
+                                    <p>
+
+                                    </p>
+
+                                    <div class="accordion-item m-y-6">
+                                        <button class="accordion-header">▷ Search/Filter Communities</button>
+                                        <div class="accordion-content">
+                                            <p>
+                                                fill
+                                            </p>
+                                        </div>
+                                    </div>
+
+                                    <div class="accordion-item m-y-6">
+                                        <button class="accordion-header">▷ List of Communities Available</button>
+                                        <div class="accordion-content">
+                                            <p>
+                                                fill
+                                            </p>
+                                        </div>
+                                    </div>
+
+                                    <div class="accordion-item m-y-6">
+                                        <button class="accordion-header">▷ Crumbs in the Community</button>
+                                        <div class="accordion-content">
+                                            <p>
+                                                fill
+                                            </p>
+                                        </div>
+                                    </div>
+
+                                    <div class="accordion-item m-y-6">
+                                        <button class="accordion-header">▷ Create, Share OZvents</button>
+                                        <div class="accordion-content">
+                                            <p>
+                                                fill
+                                            </p>
+                                        </div>
+                                    </div>
+
+                                    <div class="accordion-item m-y-6">
+                                        <button class="accordion-header">▷ Lores (Wiki for the community)</button>
+                                        <div class="accordion-content">
+                                            <p>
+                                                fill
                                             </p>
                                         </div>
                                     </div>
